# ttm-rag

./: .env  .env.example  .gitignore  .pre-commit-config.yaml  Makefile  QWEN.md  README.md  debug_paths.py  docker-compose.yml  implementation_plan.md  main.py  pyproject.toml  scratch.md  serve_docs.py  serve_docs_8082.py  test_server.py  thai_medicine.db
.clinerules/: development-workflow.md  documentation-rules.md  testing-practices.md
.github/workflows/: ci-cd.yml
deploy/: Makefile  compose.gpu.yml  compose.host-ollama.yml  compose.otel.yml  compose.yml
docker/: Dockerfile.api  otel-collector-config.yaml
docs/: api_practices.md  conf.py  current_state.md  database_tutorial.md  deploy.md  deployment.md  development_setup.md  final_summary.md  future_steps.md  implementation.md  index.rst  introduction.md  onboarding_summary.md  postgresql_setup.md  project_status.md  rag_implementation_plan.md  testing.md
docs/_build/: index.html
docs/_build/html/: .buildinfo  .buildinfo.bak  adapter_registry.html  api_practices.html  cto_assessment.html  current_state.html  dashboard_plan.html  database_tutorial.html  deploy.html  deployment.html  development_setup.html  final_summary.html  firecrawl_mcp_add_key.html  future_steps.html  genindex.html  huggingface_mcp_setup.html  implementation.html  index.html  introduction.html  objects.inv  onboarding.html  onboarding_summary.html  postgresql_setup.html  project_overview.html  project_status.html  rag_api_tutorial.html  rag_implementation_plan.html  rag_implementation_summary.html  rag_kickoff_summary.html  search.html  searchindex.js  sitemap.xml  testing.html  today_rag_plan.html
docs/api/: index.md
docs/explanations/: context7_docs_policy.md  docs_refresh_plan.md  index.md
docs/how-to/: index.md  lightpanda_mcp_setup.md  ttm_mcp_integration.md
docs/operations/: dagster_deploy.md
docs/reference/: index.md  mcp_contracts.md
docs/test-diaries/: rag_test_2025-08-29.md
docs/tutorials/: index.md  ttm_mcp_quickstart.md
memory-bank/: activeContext.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
results/: retrieval_evaluation_results.json
scripts/: rag_pipeline_test.py  run_grpc_server.py  validate_rag_readiness.py
scripts/acquisition/: fetch_pubmed_data.py
scripts/database/: init-postgres.sh  init.sql  migrate.py
scripts/evaluation/: eval_harness.py  evaluate_retrieval.py
scripts/ingestion/: ingest_documents.py
scripts/setup/: install.sh  requirements.txt
src/agents/: __init__.py
src/agents/common/: types.py
src/agents/ingestion/: __init__.py  committee_agent.py  pdpa_agent.py  quality_agent.py  safety_agent.py  taxonomy_agent.py
src/agents/query/: __init__.py  intent_agent.py  planner_agent.py  router_agent.py  safety_adjudicator.py  synthesizer_agent.py
src/api/: __init__.py  audit.py  main.py  monitoring.py  rag_router.py  sanitization.py  security.py
src/api/graphql/: schema.py
src/api/grpc/: grpc_server.py  ttm_core.proto
src/connectors/: __init__.py  pmc.py  pubmed.py
src/dashboard/: router.py
src/dashboard/templates/: index.html
src/database/: __init__.py  config.py  exceptions.py  models.py  repository.py  service.py
src/models/: document.py  pmc.py  pubmed.py  source.py
src/orchestration/: __init__.py  dagster_defs.py  resources.py
src/orchestration/assets/: ingestion_assets.py
src/pipelines/: __init__.py  main.py  pubmed_pipeline.py
src/rag/: __init__.py  chunker.py  embeddings.py  generation.py  pipeline.py  pipeline_ext.py  vector_store.py
src/rag/models/: __init__.py  base.py  hf_adapter.py  openai_adapter.py  policy.py  qwen_adapter.py  registry.py
src/utils/: encryption.py  exceptions.py  pmc_parser.py  pubmed_parser.py  pubmed_query_builder.py  rate_limiting.py  retry.py
src/validation/: models.py  service.py
tests/fixtures/: __init__.py  pubmed_xml_samples.py
tests/integration/: __init__.py  config.py  test_dagster_assets.py  test_database_integration.py  test_openwebui_model_selection.py  test_pmc_connector_integration.py  test_pubmed_connector_integration.py  test_pubmed_integration.py  test_pubmed_query_builder_integration.py  test_rate_limiting_integration.py
tests/unit/: test_api.py  test_dashboard.py  test_database.py  test_exceptions.py  test_final_summary.py  test_model_manager.py  test_pubmed_connector.py  test_pubmed_models.py  test_pubmed_parser.py  test_pubmed_pipeline.py  test_pubmed_query_builder.py  test_rag.py  test_rag_pipeline.py  test_rag_plan.py  test_rate_limiting.py  test_retry.py
tests/unit/agents/: test_ingestion_agents.py
tests/unit/api/: test_rag_router_models_and_query.py
tests/unit/models/: test_model_policy.py
tests/unit/rag/: test_pipeline_preprocessors.py  test_vector_store_filters.py
tests/unit/scripts/: test_ingest_documents_dagster_mode.py
tools/lightpanda-mcp/: index.js  package-lock.json  package.json
tools/ttm-mcp/: config.py  logging.py  schemas.py  server.py
tools/ttm-mcp/adapters/: grpc_client.py
(+93 files in other folders)
